--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "nodemon --exec babel-node ./src/server.js"
   },
   "keywords": [],
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
