--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "mongoose-delete": "^1.0.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.5",
+    "nodemailer-plugin-inline-base64": "^2.1.1"
   }
 }
