--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node ./src/server.js"
   },
   "keywords": [],
-  "engines": {
-    "node": ">=14.20.1"
-  },
+  
   "author": "",
   "license": "ISC",
   "devDependencies": {
