--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "engines": { "node": "18.x" },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node ./src/server.js"
+    "start": "nodemon --exec babel-node ./src/index.js"
   },
   "keywords": [],
   
