--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.4.2",
     "mongoose-delete": "^1.0.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.5",
-    "nodemailer-plugin-inline-base64": "^2.1.1"
+    "nodemailer-plugin-inline-base64": "^2.1.1",
+    "qs": "^6.11.2"
   }
 }
