--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,16 @@
 {
-    "version": 2,
-    "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
-
-    "builds": [
+  "version": 2,
+  "builds": [
       {
-        "src": "./server.js",
-        "use": "@vercel/node"
+          "src": "src/server.js",
+          "use": "@vercel/node"
       }
-    ],
-    "routes": [
+  ],
+  "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/"
+          "src": "/(.*)",
+          "dest": "src/server.js",
+          "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
       }
-    ]
+  ]
 }
