--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,20 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "src/server.js",
-      "use": "@vercel/node"
-    }
+      {
+          "src": "src/server.js",
+          "use": "@vercel/node"
+      }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "src/server.js"
-    }
-  ],
-  "headers": {
-    "/api/(.*)": {
-      "Access-Control-Allow-Credentials": "true",
-      "Access-Control-Allow-Origin": "*",
-      "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
-      "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
-    }
-  }
+      {
+          "src": "/(.*)",
+          "dest": "src/server.js",
+          "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"],
+          "headers": {
+            "Access-Control-Allow-Origin": "*"
+          }
+      }
+  ]
+  
 }
