--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,23 @@
             "Access-Control-Allow-Origin": "*"
           }
       }
-  ]
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "src/server.js" }
+],
+"headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" }
+      ]
+    },
+    {
+      "source": "/ht-shop-three.vercel.app/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" }
+      ]
+    }  
+]
   
 }
