--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,20 @@
 {
   "version": 2,
   "builds": [
-      {
-          "src": "src/server.js",
-          "use": "@vercel/node"
-      }
+    {
+      "src": "src/server.js",
+      "use": "@vercel/node"
+    }
   ],
-  "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "src/server.js",
-          "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"],
-          "headers": {
-            "Access-Control-Allow-Origin": "*"
-          }
-      }
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
+    }
   ]
-  
 }
