--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
           "dest": "src/server.js",
           "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"],
           "headers": {
-            "Access-Control-Allow-Origin": "*"
+            "Access-Control-Allow-Origin": true
           }
       }
   ]
