--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.5",
     "nodemailer-plugin-inline-base64": "^2.1.1",
-    "qs": "^6.11.2"
+    "qs": "^6.11.2",
+    "restfulapi": "file:"
   }
 }
